test/conformance/chainsaw/mutating-policies/reporting/mutate-existing/configmaps.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-cm-1
  namespace: test-mpol-reporting-different-trigger-target-ns 
data:
  key1: value1
