test/conformance/chainsaw/mutating-policies/reporting/mutate-existing/test-namespace-update.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-mpol-reporting-different-trigger-target-ns
  labels:
    test: "enabled"
    existing: "yes"
