test/conformance/chainsaw/mutating-policies/reporting/mutate-existing/report-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  namespace: test-mpol-reporting-different-trigger-target-ns
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: v1
    kind: ConfigMap
    name: test-cm-1
results:
- message: success
  policy: test-mpol-reporting-different-trigger-target
  properties:
    process: background scan
  result: pass
  scored: true
  source: KyvernoMutatingPolicy
scope:
  apiVersion: v1
  kind: ConfigMap
  name: test-cm-1
  namespace: test-mpol-reporting-different-trigger-target-ns
summary:
  error: 0
  fail: 0
  pass: 1
  skip: 0
  warn: 0
