test/conformance/chainsaw/mutating-policies/reporting/mutate-existing/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: different-trigger-target
spec:
  steps:
  - name: create namespace and configmaps
    try:
    - create:
        file: test-namespace.yaml
    - assert:
        file: test-namespace.yaml
    - create:
        file: configmaps.yaml
    - assert:
        file: configmaps.yaml
  - name: create policy
    try:
    - create:
        file: policy.yaml
  - name: sleep
    try:
    - sleep:
        duration: 5s
  - name: trigger mutation by updating namespace
    try:
    - apply:
        file: test-namespace-update.yaml
  - name: verify configmaps are mutated
    try:
    - assert:
        file: configmaps-assert.yaml 
  - name: verify-policy-report
    description: Verify PolicyReport for the mutating policy
    try:
    - assert:
        file: report-assert.yaml
        timeout: 60s
